Fix core VM logic, compiler issues, and stabilize test suite.